--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
             <div class="brand">
                 <i class="fa-solid fa-tower-broadcast" style="color: var(--primary)"></i>
                 <div>
-                    <h1>Fire Detection Sys.</h1>
+                    <h1>Fire Detection System</h1>
                     <span style="color: var(--text-muted); font-size: 0.7rem">STM32F303RET6 + Zigbee (IEEE 802.15.4)</span>
                 </div>
             </div>
