--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Forest Fire Detection System | STM32 & Zigbee WSN</title>
+    <title>Forest Fire Detection System WSN</title>
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -287,7 +287,7 @@
             <div class="brand">
                 <i class="fa-solid fa-tower-broadcast" style="color: var(--primary)"></i>
                 <div>
-                    <h1>Fire Detection Sys.</h1>
+                    <h1>Fire Detection System</h1>
                     <span style="display: inline-block;">STM32 + Zigbee</span>
                 </div>
             </div>
